export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "test": 1
        },
        "id": [],
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "root_test_fn",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "input": 2,
        "output": 18,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 14,
          "an_email": 17
        },
        "id": [],
        "required": []
      },
      {
        "type": "string",
        "title": "ComplexType_a_string_string",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "float",
        "title": "ComplexType_a_float_float",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "ComplexType_an_enum_string_enum",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {}
      },
      {
        "type": "integer",
        "title": "ComplexType_an_integer_enum_integer_enum",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        }
      },
      {
        "type": "float",
        "title": "ComplexType_a_float_enum_float",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {}
      },
      {
        "type": "object",
        "title": "ComplexType_a_struct_struct",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "value": 9
        },
        "id": [],
        "required": []
      },
      {
        "type": "float",
        "title": "ComplexType_a_struct_struct_value_float",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "optional",
        "title": "ComplexType_nested_ComplexType_nested_ComplexType_nested_either_list_optional",
        "runtime": 0,
        "policies": [],
        "config": {},
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "ComplexType_nested_ComplexType_nested_either_list",
        "runtime": 0,
        "policies": [],
        "config": {},
        "items": 12
      },
      {
        "type": "either",
        "title": "ComplexType_nested_either",
        "runtime": 0,
        "policies": [],
        "config": {},
        "oneOf": [
          3,
          13
        ]
      },
      {
        "type": "integer",
        "title": "ComplexType_nested_either_t1_integer",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "one": 15,
          "two": 16
        },
        "id": [],
        "required": []
      },
      {
        "type": "list",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "items": 13,
        "minItems": 3
      },
      {
        "type": "optional",
        "title": "SomeType_two_SomeType_optional",
        "runtime": 0,
        "policies": [],
        "config": {},
        "item": 14,
        "default_value": null
      },
      {
        "type": "string",
        "title": "ComplexType_an_email_string_email",
        "runtime": 0,
        "policies": [],
        "config": {},
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "root_test_fn_output",
        "runtime": 0,
        "policies": [],
        "config": {}
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => true",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "add": 1,
          "multiply": 4
        },
        "id": [],
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "root_add_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_add_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "properties": {
          "first": 3,
          "second": 3
        },
        "id": [],
        "required": []
      },
      {
        "type": "float",
        "title": "root_add_fn_input_first_float",
        "runtime": 1,
        "policies": [],
        "config": {}
      },
      {
        "type": "function",
        "title": "root_multiply_fn",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "input": 5,
        "output": 6,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_multiply_fn_input",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "first": 6,
          "second": 6
        },
        "id": [],
        "required": []
      },
      {
        "type": "float",
        "title": "root_multiply_fn_input_first_float",
        "runtime": 0,
        "policies": [],
        "config": {}
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_5ac5ebaa386435a02b0a96c48af3bf5d26e4d9ce29e5c9b54660b88b6dc3eea6",
          "fn": "lambda x: (x['first'] + x['second'])"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = ({ first, second }) => first * second",
          "secrets": []
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "one": 1,
          "two": 6,
          "three": 9
        },
        "id": [],
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "root_one_fn",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_one_fn_input",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "a": 3,
          "b": 4
        },
        "id": [],
        "required": []
      },
      {
        "type": "integer",
        "title": "root_one_fn_input_a_integer",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "integer",
        "title": "root_one_fn_input_b_integer",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "root_one_fn_output",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "root_two_fn",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "input": 7,
        "output": 8,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "id": 3,
          "post": 8
        },
        "id": [],
        "required": []
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "id": 3,
          "author": 7
        },
        "id": [],
        "required": []
      },
      {
        "type": "function",
        "title": "root_three_fn",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 12",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "internal_policy"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (user) => ({ id: 12, user })",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => false",
          "secrets": []
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "entryPoint": "scripts/three.ts",
          "deps": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {
        "scripts/three.ts": {
          "path": "scripts/three.ts",
          "hash": "564fe4792102c50aac9801faeb3c6402c49b1f7c7cbb22dc6d54886e45cfa3b2",
          "size": 307
        }
      }
    }
  }
]'
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "test": 1
        },
        "id": [],
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "root_test_fn",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "input": 2,
        "output": 18,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 14,
          "an_email": 17
        },
        "id": [],
        "required": []
      },
      {
        "type": "string",
        "title": "ComplexType_a_string_string",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "float",
        "title": "ComplexType_a_float_float",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "ComplexType_an_enum_string_enum",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {}
      },
      {
        "type": "integer",
        "title": "ComplexType_an_integer_enum_integer_enum",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        }
      },
      {
        "type": "float",
        "title": "ComplexType_a_float_enum_float",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {}
      },
      {
        "type": "object",
        "title": "ComplexType_a_struct_struct",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "value": 9
        },
        "id": [],
        "required": []
      },
      {
        "type": "float",
        "title": "ComplexType_a_struct_struct_value_float",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "optional",
        "title": "ComplexType_nested_ComplexType_nested_ComplexType_nested_either_list_optional",
        "runtime": 0,
        "policies": [],
        "config": {},
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "ComplexType_nested_ComplexType_nested_either_list",
        "runtime": 0,
        "policies": [],
        "config": {},
        "items": 12
      },
      {
        "type": "either",
        "title": "ComplexType_nested_either",
        "runtime": 0,
        "policies": [],
        "config": {},
        "oneOf": [
          3,
          13
        ]
      },
      {
        "type": "integer",
        "title": "ComplexType_nested_either_t1_integer",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "one": 15,
          "two": 16
        },
        "id": [],
        "required": []
      },
      {
        "type": "list",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "items": 13,
        "minItems": 3
      },
      {
        "type": "optional",
        "title": "SomeType_two_SomeType_optional",
        "runtime": 0,
        "policies": [],
        "config": {},
        "item": 14,
        "default_value": null
      },
      {
        "type": "string",
        "title": "ComplexType_an_email_string_email",
        "runtime": 0,
        "policies": [],
        "config": {},
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "root_test_fn_output",
        "runtime": 0,
        "policies": [],
        "config": {}
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => true",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "add": 1,
          "multiply": 4
        },
        "id": [],
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "root_add_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_add_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "properties": {
          "first": 3,
          "second": 3
        },
        "id": [],
        "required": []
      },
      {
        "type": "float",
        "title": "root_add_fn_input_first_float",
        "runtime": 1,
        "policies": [],
        "config": {}
      },
      {
        "type": "function",
        "title": "root_multiply_fn",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "input": 5,
        "output": 6,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_multiply_fn_input",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "first": 6,
          "second": 6
        },
        "id": [],
        "required": []
      },
      {
        "type": "float",
        "title": "root_multiply_fn_input_first_float",
        "runtime": 0,
        "policies": [],
        "config": {}
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = ({first, second}) => first * second",
          "secrets": []
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "one": 1,
          "two": 6,
          "three": 9
        },
        "id": [],
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "root_one_fn",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_one_fn_input",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "a": 3,
          "b": 4
        },
        "id": [],
        "required": []
      },
      {
        "type": "integer",
        "title": "root_one_fn_input_a_integer",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "integer",
        "title": "root_one_fn_input_b_integer",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "root_one_fn_output",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "root_two_fn",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "input": 7,
        "output": 8,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "id": 3,
          "post": 8
        },
        "id": [],
        "required": []
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "id": 3,
          "author": 7
        },
        "id": [],
        "required": []
      },
      {
        "type": "function",
        "title": "root_three_fn",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 12",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "internal_policy"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (user) => ({ id: 12, user })",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => false",
          "secrets": []
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "entryPoint": "scripts/three.ts",
          "deps": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {
        "scripts/three.ts": {
          "path": "scripts/three.ts",
          "hash": "564fe4792102c50aac9801faeb3c6402c49b1f7c7cbb22dc6d54886e45cfa3b2",
          "size": 307
        }
      }
    }
  }
]'
`;
